# ProjectMind

./: .gitignore  LICENSE  README.md  pyproject.toml  skills-lock.json
examples/demo-project/: .env.example  README.md  auth.py  config.py  docker-compose.yml  seed.py  server.py
examples/demo-project/tests/: test_server.py
projectmind/: __init__.py  candidate_finder.py  cli.py  llm_provider.py  models.py  reporter.py  review_engine.py  validator.py  workspace.py
tests/: test_candidate_finder.py  test_validator.py
