[project]
name = "projectmind"
version = "0.1.0"
description = "Change Impact & Review Obligation Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "google-genai>=0.1.1",
]

[project.scripts]
projectmind = "projectmind.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
